--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,7 @@
 ADMIN post pages:
+- update edit and delete options for newer system
 - add attachment area to post editor and details
 ADMIN user pages:
 - finish portfolio section
 
 main:
-- add username into upper corner
-- make admin dashboard button disappear if not an admin
-- add logout option
