--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 ADMIN post pages:
-- update edit and delete options for newer system
+- update edit and delete options for newer setup
 - add attachment area to post editor and details
 ADMIN user pages:
 - finish portfolio section
+- look into mkdir issue with user deletion
 
 main:
