Post editing DB update WIP, created functions in post handling for comparing a post for changes (will help with editing posts), modified a lot of tags and attachment handling, updated some admin-side html

--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,22 @@
 
 LOGIC ----------------------------------------------------------------------------------------------
 users:
-- update user handling functions to pull from database instead of csv
-- add option for user's name?
+- update user handling functions to pull from database instead of csv -- DONE
+- add option for user's name? -- db fields exist, need to add to signup & admin user manager
 - give user option to edit their own info and delete their account, as well as their posts and portfolios
 - need to experiment to make sure user cant cheat system and view/make posts by other users. maybe make sure post belongs to the userID?
 
 posts:
-- update post handling functions to pull from database instead of json files (this one will suck!)
+- update post handling functions to pull from database instead of json files -- IN PROGRESS
+        > admin side details and creation are finished
+        > currently working on edit and deletion logic
+        > STILL NEED TO UPDATE USER-SIDE FOR DIFFERENT KEY NAMES
 - add logic to delete and edit portfolios
 
 other:
+- add debug variable to globals file that will show extra text and stuff from echo statements in functions being run? current stuff that could be helpful is marked with "// debug" comment
 - make sure session calls are all before any html (think this is done after but may need to check again)
-----^ session_start() is now called in /lib/global.php, requiring this file first on all user pages should solve this issue
+        NOTE: session_start() is now called in /lib/global.php, requiring this file first on all user pages should solve this issue
 - look into session_destroy warning on logout, possibly related to above?
 - convert users and posts to object-oriented style? (saving this for very last if we have time and wanna extra points since its not required. would be good practice tho)
 
@@ -21,6 +25,7 @@ general
 - finalize all pages
 - add user settings page where they can edit their info and change their shizz
 - add explore page where ALL posts show up by post date
+- add small selection of posts to home page
 - implement tag search function
 - implement search function in general
 - add post and portfolio managment pages for users to edit their posts and content
