--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 
 LOGIC ----------------------------------------------------------------------------------------------
 users:
-- add option for user's name? -- db fields exist, need to add to signup & admin user manager
+- need to add to signup & admin user manager
 - give user option to edit their own info and delete their account, as well as their posts and portfolios
 - need to experiment to make sure user cant cheat system and view/make posts by other users. maybe make sure post belongs to the userID on page load?
 
